# assessment_api

./: .gitignore  README.md  prompt.txt  pyproject.toml  pytest.ini  questions.json
assessment/: settings.py  urls.py
survey_api/: models.py  tests.py  urls.py  utils.py  views.py
survey_api/migrations/: 0001_initial.py  0002_auto_20210925_0049.py
survey_api/templates/survey_api/: question.html
tests/: test_utils.py
