[tool.poetry]
name = "timed_assessment"
version = "0.1.0"
description = ""
authors = ["Dylan Wilson <dylanjw@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"

[tool.poetry.dev-dependencies]
pytest-django = "^4.4.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
